log
Sun 24 Mar 2024 12:24:40 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
37d3a07
Sun 24 Mar 2024 12:30:41 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:10: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   63 |          while (entero != NULL);
      |          ^~~~~
exercises.c:64:25: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   64 |                         suma += entero;
      |                         ^~~~
exercises.c:64:25: error: ‘suma’ undeclared (first use in this function)
exercises.c:64:25: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:25: error: ‘dato’ undeclared (first use in this function)
   65 |                         dato = (int*)next(L);
      |                         ^~~~
exercises.c:61:14: error: unused variable ‘cont’ [-Werror=unused-variable]
   61 |          int cont = 0;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
939d728
Sun 24 Mar 2024 12:30:57 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:10: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   63 |          while (entero != NULL);
      |          ^~~~~
exercises.c:64:25: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   64 |                         suma += *entero;
      |                         ^~~~
exercises.c:64:25: error: ‘suma’ undeclared (first use in this function)
exercises.c:64:25: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:25: error: ‘dato’ undeclared (first use in this function)
   65 |                         dato = (int*)next(L);
      |                         ^~~~
exercises.c:61:14: error: unused variable ‘cont’ [-Werror=unused-variable]
   61 |          int cont = 0;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
e509ace
Sun 24 Mar 2024 12:32:39 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:25: error: ‘suma’ undeclared (first use in this function)
   65 |                         suma += *entero;
      |                         ^~~~
exercises.c:65:25: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:66:25: error: ‘dato’ undeclared (first use in this function)
   66 |                         dato = (int*)next(L);
      |                         ^~~~
exercises.c:61:14: error: unused variable ‘cont’ [-Werror=unused-variable]
   61 |          int cont = 0;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
cafafe5
Sun 24 Mar 2024 12:34:09 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:25: error: ‘suma’ undeclared (first use in this function)
   65 |                         suma += *entero;
      |                         ^~~~
exercises.c:65:25: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:66:30: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |                         cont = (int*)next(L);
      |                              ^
exercises.c:61:14: error: variable ‘cont’ set but not used [-Werror=unused-but-set-variable]
   61 |          int cont = 0;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
a47a798
Sun 24 Mar 2024 12:34:50 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:4: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   68 |    return ;
      |    ^~~~~~
exercises.c:60:5: note: declared here
   60 | int sumaLista(List *L) {
      |     ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
60bd890
Sun 24 Mar 2024 12:35:00 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 20/70
87237b9
Sun 24 Mar 2024 12:49:05 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:38: error: dereferencing ‘void *’ pointer [-Werror]
   84 |                          if (elem == *entero)
      |                                      ^~~~~~~
exercises.c:84:38: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
Compilation failed
fcd568d
Sun 24 Mar 2024 12:49:41 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
da6fbaa
